--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,9 @@
         <a href="{{ '/presentations' | relative_url }}">
           <li class="btn-nav">Presentations</li>
         </a>
+        <a href="{{ '/softwares' | relative_url }}">
+          <li class="btn-nav">Softwares</li>
+        </a>
         {% if site.blog %}
         <a href="{{ '/blog' | relative_url }}">
           <li class="btn-nav">Blog</li>
@@ -30,6 +33,9 @@
         <li class="current">Publications</li>
         <a href="{{ '/presentations' | relative_url }}">
           <li class="btn-nav">Presentations</li>
+        </a>
+        <a href="{{ '/softwares' | relative_url }}">
+          <li class="btn-nav">Softwares</li>
         </a>
         {% if site.blog %}
         <a href="{{ '/blog' | relative_url }}">
@@ -48,6 +54,9 @@
           <li class="btn-nav">Publications</li>
         </a>
         <li class="current">Presentations</li>
+        <a href="{{ '/softwares' | relative_url }}">
+          <li class="btn-nav">Softwares</li>
+        </a>
         {% if site.blog %}
         <a href="{{ '/blog' | relative_url }}">
           <li class="btn-nav">Blog</li>
@@ -67,6 +76,9 @@
         <a href="{{ '/presentations' | relative_url }}">
           <li class="btn-nav">Presentations</li>
         </a>
+        <a href="{{ '/softwares' | relative_url }}">
+          <li class="btn-nav">Softwares</li>
+        </a>
         {% if site.blog %}
         <li class="current">Blog</li>
         <a href="{{ '/tags' | relative_url }}">
@@ -84,11 +96,34 @@
         <a href="{{ '/presentations' | relative_url }}">
           <li class="btn-nav">Presentations</li>
         </a>
+        <a href="{{ '/softwares' | relative_url }}">
+          <li class="btn-nav">Softwares</li>
+        </a>
         {% if site.blog %}
         <a href="{{ '/blog' | relative_url }}">
           <li class="btn-nav">Blog</li>
         </a>
         <li class="current">Tags</li>
+        {% endif %}
+        <!-- softwares -->
+        {% when 'softwares' %}
+        <a href="{{ '/' | relative_url }}">
+          <li class="btn-nav">Home</li>
+        </a>
+        <a href="{{ '/publications' | relative_url }}">
+          <li class="btn-nav">Publications</li>
+        </a>
+        <a href="{{ '/presentations' | relative_url }}">
+          <li class="btn-nav">Presentations</li>
+        </a>
+        <li class="current">Softwares</li>
+        {% if site.blog %}
+        <a href="{{ '/blog' | relative_url }}">
+          <li class="btn-nav">Blog</li>
+        </a>
+        <a href="{{ '/tags' | relative_url }}">
+          <li class="btn-nav">Tags</li>
+        </a>
         {% endif %}
         {% else %}
         <!-- others -->
@@ -100,6 +135,9 @@
         </a>
         <a href="{{ '/presentations' | relative_url }}">
           <li class="btn-nav">Presentations</li>
+        </a>
+        <a href="{{ '/softwares' | relative_url }}">
+          <li class="btn-nav">Softwares</li>
         </a>
         {% if site.blog %}
         <a href="{{ '/blog' | relative_url }}">
