--- a/_sass/_grape-theme.scss
+++ b/_sass/_grape-theme.scss
@@ -15,6 +15,7 @@
 @import 'layouts/portfolio';
 @import 'layouts/publications';
 @import 'layouts/presentations';
+@import 'layouts/page';
 
 // Include 
 @import 'includes/header';
