change theme color

--- a/_sass/base/_variable.scss
+++ b/_sass/base/_variable.scss
@@ -1,7 +1,7 @@
-$theme-color : #fdcf5a;
+$theme-color : #b98243;
 $theme-bright : #f4f4f9;
-$theme-dark : #1d2769;
-$theme-dark2 : #1d2769;
+$theme-dark : #52a86fbe;
+$theme-dark2 : #52a86f;
 $text : rgba(0,0,0,0.8);
 $text-gray : rgba(0,0,0,0.54);
 $divider-color : #e7e9ee;
