change color scheme

--- a/_sass/base/_variable.scss
+++ b/_sass/base/_variable.scss
@@ -1,7 +1,7 @@
-$theme-color : #b98243;
+$theme-color : #BDC581;
 $theme-bright : #f4f4f9;
-$theme-dark : #52a86fbe;
-$theme-dark2 : #52a86f;
+$theme-dark : #6D214F;
+$theme-dark2 : #53193c;
 $text : rgba(0,0,0,0.8);
 $text-gray : rgba(0,0,0,0.54);
 $divider-color : #e7e9ee;
